--- a/index.html
+++ b/index.html
@@ -11,6 +11,115 @@
     <link rel="stylesheet" href="css/components.css">
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <style>
+        /* ── Auth bar (banner direita) ────────────────────── */
+        .auth-bar {
+            position: absolute;
+            top: 10px; right: 14px;
+            display: flex; align-items: center; gap: 8px;
+            z-index: 10;
+        }
+        .auth-user {
+            display: flex; align-items: center; gap: 7px;
+            background: rgba(255,255,255,0.92);
+            border: 1px solid var(--border);
+            border-radius: var(--radius-full);
+            padding: 5px 12px 5px 6px;
+            backdrop-filter: blur(8px);
+        }
+        .auth-avatar {
+            width: 26px; height: 26px; border-radius: 50%;
+            background: linear-gradient(135deg, var(--primary-dark), var(--primary-light));
+            display: flex; align-items: center; justify-content: center;
+            font-family: var(--font-title); font-size: 9px; color: #fff; font-weight: 700;
+        }
+        .auth-name {
+            font-family: var(--font-title); font-size: 10px;
+            letter-spacing: 1px; color: var(--primary-dark);
+        }
+        .auth-logout {
+            display: flex; align-items: center; gap: 5px;
+            background: rgba(255,255,255,0.92); border: 1px solid rgba(220,80,60,0.3);
+            border-radius: var(--radius-full); padding: 5px 11px;
+            font-family: var(--font-title); font-size: 9px; letter-spacing: 1px;
+            color: var(--red, #c0392b); cursor: pointer; backdrop-filter: blur(8px);
+            transition: all 0.2s;
+        }
+        .auth-logout:hover { background: rgba(220,80,60,0.08); }
+        .auth-login {
+            display: flex; align-items: center; gap: 6px;
+            background: rgba(255,255,255,0.92); border: 1px solid var(--border);
+            border-radius: var(--radius-full); padding: 5px 14px;
+            font-family: var(--font-title); font-size: 10px; letter-spacing: 1.5px;
+            color: var(--primary-dark); text-decoration: none; backdrop-filter: blur(8px);
+            transition: all 0.2s;
+        }
+        .auth-login:hover { background: #fff; }
+
+        /* ── Drawer auth section ──────────────────────────── */
+        .drawer-auth { padding: 14px 16px; border-bottom: 1px solid var(--border); }
+        .drawer-auth-logado {
+            display: flex; align-items: center; gap: 10px;
+        }
+        .drawer-auth-avatar {
+            width: 38px; height: 38px; border-radius: 50%; flex-shrink: 0;
+            background: linear-gradient(135deg, var(--primary-dark), var(--primary-light));
+            display: flex; align-items: center; justify-content: center;
+            font-family: var(--font-title); font-size: 13px; color: #fff; font-weight: 700;
+        }
+        .drawer-auth-info { flex: 1; min-width: 0; }
+        .drawer-auth-nome {
+            font-family: var(--font-title); font-size: 12px;
+            color: var(--primary-dark); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+        }
+        .drawer-auth-tipo { font-size: 10px; color: var(--text-faint); margin-top: 1px; }
+        .drawer-auth-sair {
+            padding: 5px 10px; border-radius: var(--radius-sm);
+            border: 1px solid rgba(220,80,60,0.3); background: rgba(220,80,60,0.06);
+            color: var(--red, #c0392b); font-family: var(--font-title);
+            font-size: 9px; letter-spacing: 1px; cursor: pointer; flex-shrink: 0;
+            transition: all 0.2s;
+        }
+        .drawer-auth-sair:hover { background: rgba(220,80,60,0.12); }
+        .drawer-auth-login {
+            display: flex; align-items: center; gap: 8px;
+            padding: 10px 12px; border-radius: var(--radius-sm);
+            background: var(--primary-faint); border: 1px solid var(--border);
+            font-family: var(--font-title); font-size: 10px; letter-spacing: 1.5px;
+            color: var(--primary-dark); text-decoration: none; transition: all 0.2s;
+        }
+        .drawer-auth-login:hover { background: rgba(0,144,152,0.12); }
+
+        /* ── Drawer nav grupos ────────────────────────────── */
+        .drawer-group { margin-top: 4px; }
+        .drawer-group-label {
+            font-family: var(--font-title); font-size: 8px; letter-spacing: 3px;
+            text-transform: uppercase; color: var(--text-faint);
+            padding: 10px 16px 4px;
+        }
+        .drawer-item {
+            display: flex; align-items: center; gap: 10px;
+            padding: 10px 16px; text-decoration: none;
+            color: var(--text-main); font-size: 13px;
+            transition: background 0.15s; border-radius: 0;
+        }
+        .drawer-item:hover { background: var(--primary-faint); color: var(--primary-dark); }
+        .drawer-item.sub {
+            padding-left: 32px; font-size: 12px; color: var(--text-muted);
+        }
+        .drawer-item.sub:hover { color: var(--primary-dark); }
+        .drawer-icon {
+            width: 28px; height: 28px; border-radius: var(--radius-sm);
+            background: var(--primary-faint); border: 1px solid var(--border);
+            display: flex; align-items: center; justify-content: center;
+            font-family: var(--font-title); font-size: 9px; font-weight: 700;
+            color: var(--primary-dark); flex-shrink: 0;
+        }
+        .drawer-item.sub .drawer-icon {
+            width: 22px; height: 22px; font-size: 8px;
+            background: transparent; border-color: rgba(0,144,152,0.15);
+        }
+    </style>
 </head>
 <body>
 <div class="page-wrapper">
@@ -46,20 +155,47 @@
         <div class="drawer-auth" id="drawer-auth"></div>
 
         <nav class="drawer-nav">
-            <a href="zion.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Zion Lisboa</a>
-            <a href="ministerios.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Ministérios</a>
-            <a href="links.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Links</a>
-            <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Localização</a>
-            <a href="keola.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Keola</a>
-            <a href="zao.html"         class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>ZAO</a>
-            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Chat Assistente</a>
-            <a href="membros.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Membros</a>
-            <a href="visitantes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Visitantes</a>
-            <a href="dizimos.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Dízimos</a>
-            <a href="salas.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Salas</a>
-            <a href="aprovacoes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Aprovação</a>
-            <a href="admin.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">️</div>Cadastros</a>
+
+            <!-- Geral -->
+            <div class="drawer-group">
+                <div class="drawer-group-label">Igreja</div>
+                <a href="zion.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">ZL</div>Zion Lisboa</a>
+                <a href="ministerios.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">MI</div>Ministérios</a>
+                <a href="links.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">LK</div>Links</a>
+                <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">LC</div>Localização</a>
+            </div>
+
+            <!-- Programas -->
+            <div class="drawer-group">
+                <div class="drawer-group-label">Programas</div>
+                <a href="keola.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">KE</div>Cardápio</a>
+                <a href="zao.html"   class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">ZA</div>Cursos</a>
+                <a href="chat.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">CH</div>Chat Assistente</a>
+            </div>
+
+            <!-- Pessoas -->
+            <div class="drawer-group">
+                <div class="drawer-group-label">Pessoas</div>
+                <a href="membros.html"    class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">ME</div>Membros</a>
+                <a href="visitantes.html" class="drawer-item sub" onclick="closeDrawer()"><div class="drawer-icon">VI</div>Visitantes</a>
+            </div>
+
+            <!-- Agendamentos -->
+            <div class="drawer-group">
+                <div class="drawer-group-label">Agendamentos</div>
+                <a href="salas.html"      class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">SA</div>Salas</a>
+                <a href="aprovacoes.html" class="drawer-item sub" onclick="closeDrawer()"><div class="drawer-icon">AP</div>Aprovação de Pedidos</a>
+            </div>
+
+            <!-- Admin -->
+            <div class="drawer-group">
+                <div class="drawer-group-label">Administração</div>
+                <a href="dizimos.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">DZ</div>Dízimos</a>
+                <a href="admin.html"   class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">AD</div>Cadastros</a>
+            </div>
+
         </nav>
+
         <div class="drawer-footer">
             <div class="drawer-footer-links">
                 <a class="drawer-footer-link" href="https://zionchurch.org.br/" target="_blank">
@@ -122,103 +258,99 @@
                 @ZionLisboa
             </a>
         </div>
-        <div class="footer-div"></div>
-        <div class="footer-copy">© 2026 Zion Lisboa — Todos os direitos reservados</div>
-        <div class="footer-addr">Rua do Centro Cultural, 11 · 1700-036 Alvalade · Lisboa, Portugal</div>
+        <div class="footer-divider"></div>
+        <div class="footer-bottom">
+            <div class="footer-copy">© 2026 Zion Lisboa — Todos os direitos reservados</div>
+            <div class="footer-address">Rua do Centro Cultural, 11 · 1700-036 Alvalade · Lisboa, Portugal</div>
+        </div>
     </div>
 </div>
 
 <script>
-    // ── DRAWER ─────────────────────────────────────────────────
-    function toggleDrawer() {
-        const open = document.getElementById('drawer').classList.toggle('open');
-        document.getElementById('drawerOverlay').classList.toggle('open', open);
-        document.getElementById('hamburger').classList.toggle('open', open);
-    }
-    function closeDrawer() {
-        document.getElementById('drawer').classList.remove('open');
-        document.getElementById('drawerOverlay').classList.remove('open');
-        document.getElementById('hamburger').classList.remove('open');
-    }
-    document.addEventListener('keydown', e => { if (e.key === 'Escape') closeDrawer(); });
+// ── DRAWER ─────────────────────────────────────────────────
+function toggleDrawer() {
+    const open = document.getElementById('drawer').classList.toggle('open');
+    document.getElementById('drawerOverlay').classList.toggle('open', open);
+    document.getElementById('hamburger').classList.toggle('open', open);
+}
+function closeDrawer() {
+    document.getElementById('drawer').classList.remove('open');
+    document.getElementById('drawerOverlay').classList.remove('open');
+    document.getElementById('hamburger').classList.remove('open');
+}
+document.addEventListener('keydown', e => { if (e.key === 'Escape') closeDrawer(); });
 
-    /* === BOTÕES GRID === */
-    document.querySelectorAll(".btn-icon").forEach(btn => {
-        const label = btn.querySelector(".label").innerText
-            .replace(/\n/g, " ")
-            .trim();
+// ── Botões grid — iniciais ─────────────────────────────────
+document.querySelectorAll('.btn-icon').forEach(btn => {
+    const label = btn.querySelector('.label').innerText.replace(/\n/g, ' ').trim();
+    const words = label.split(' ').filter(w => w.length > 2);
+    let initials = words.length === 1 ? words[0].substring(0,2) : words[0][0] + words[1][0];
+    btn.querySelector('.icon-wrap').textContent = initials.toUpperCase();
+});
 
-        const words = label.split(" ").filter(w => w.length > 2);
+// ── AUTH ────────────────────────────────────────────────────
+function renderAuth() {
+    const user       = ZionAuth.getUser();
+    const authBar    = document.getElementById('auth-bar');
+    const drawerAuth = document.getElementById('drawer-auth');
+    const tipoLabel  = { visitante: 'Visitante', membro: 'Membro', admin: 'Administrador' };
 
-        let initials = "";
+    if (user) {
+        const initials  = (user.nome || 'U').split(' ').map(w => w[0]).slice(0,2).join('').toUpperCase();
+        const firstName = (user.nome || 'Utilizador').split(' ')[0];
 
-        if (words.length === 1) {
-            initials = words[0].substring(0,2);
-        } else {
-            initials = words[0][0] + words[1][0];
-        }
+        // Banner: avatar + nome + botão sair
+        authBar.innerHTML = `
+        <div class="auth-user">
+            <div class="auth-avatar">${initials}</div>
+            <span class="auth-name">${firstName}</span>
+        </div>
+        <button class="auth-logout" onclick="ZionAuth.logout()">
+            <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                <polyline points="16 17 21 12 16 7"/>
+                <line x1="21" y1="12" x2="9" y2="12"/>
+            </svg>
+            Sair
+        </button>`;
 
-        btn.querySelector(".icon-wrap").textContent = initials.toUpperCase();
-    });
-
-    document.querySelectorAll(".drawer-item").forEach(item => {
-        const text = item.childNodes[2].textContent.trim();
-        const words = text.split(" ");
-
-        let initials = words[0][0];
-        if (words.length > 1) {
-            initials += words[1][0];
-        }
-
-        item.querySelector(".drawer-icon").textContent = initials.toUpperCase();
-    });
-
-    // ── AUTH ────────────────────────────────────────────────────
-    function renderAuth() {
-        const user       = ZionAuth.getUser();
-        const authBar    = document.getElementById('auth-bar');
-        const drawerAuth = document.getElementById('drawer-auth');
-        const tipoLabel  = { visitante: 'Visitante', membro: 'Membro', admin: 'Administrador' };
-
-        if (user) {
-            const initials  = (user.nome || 'U').split(' ').map(w => w[0]).slice(0, 2).join('').toUpperCase();
-            const firstName = (user.nome || 'Utilizador').split(' ')[0];
-
-            authBar.innerHTML = `
-            <div class="auth-user">
-                <div class="auth-avatar">${initials}</div>
-                <span class="auth-name">${firstName}</span>
+        // Drawer: avatar + nome completo + tipo + botão sair
+        drawerAuth.innerHTML = `
+        <div class="drawer-auth-logado">
+            <div class="drawer-auth-avatar">${initials}</div>
+            <div class="drawer-auth-info">
+                <div class="drawer-auth-nome">${user.nome}</div>
+                <div class="drawer-auth-tipo">${tipoLabel[user.tipo] || user.tipo}</div>
             </div>
-            <button class="auth-logout" onclick="ZionAuth.logout()">
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
-                Sair
-            </button>`;
+            <button class="drawer-auth-sair" onclick="ZionAuth.logout()">Sair</button>
+        </div>`;
 
-            drawerAuth.innerHTML = `
-            <div class="drawer-auth-logado">
-                <div class="drawer-auth-avatar">${initials}</div>
-                <div class="drawer-auth-info">
-                    <div class="drawer-auth-nome">${user.nome}</div>
-                    <div class="drawer-auth-tipo">${tipoLabel[user.tipo] || user.tipo}</div>
-                </div>
-                <button class="drawer-auth-sair" onclick="ZionAuth.logout()">Sair</button>
-            </div>`;
-        } else {
-            authBar.innerHTML = `
-            <a href="login.html" class="auth-login">
-                <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
-                Entrar
-            </a>`;
+    } else {
+        // Banner: botão entrar
+        authBar.innerHTML = `
+        <a href="login.html" class="auth-login">
+            <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
+                <polyline points="10 17 15 12 10 7"/>
+                <line x1="15" y1="12" x2="3" y2="12"/>
+            </svg>
+            Entrar
+        </a>`;
 
-            drawerAuth.innerHTML = `
-            <a href="login.html" class="drawer-auth-login" onclick="closeDrawer()">
-                <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
-                Entrar / Registar
-            </a>`;
-        }
+        // Drawer: botão entrar/registar
+        drawerAuth.innerHTML = `
+        <a href="login.html" class="drawer-auth-login" onclick="closeDrawer()">
+            <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
+                <polyline points="10 17 15 12 10 7"/>
+                <line x1="15" y1="12" x2="3" y2="12"/>
+            </svg>
+            Entrar / Registar
+        </a>`;
     }
+}
 
-    renderAuth();
+renderAuth();
 </script>
 </body>
 </html>
